# java-deepspeech

./: .gitignore  README.md  settings.gradle.kts
kotlin/: build.gradle.kts
kotlin/src/main/kotlin/balls/: App.kt  Penis.kt
kotlin/src/main/kotlin/com/github/briandilley/deepspeech/: App.kt
kotlin/src/main/kotlin/com/github/briandilley/deepspeech/util/: JNI.kt
kotlin/src/main/kotlin/com/igor/deepspeech/: AbstractNativeObject.kt  DeepSpeechNative.kt
kotlin/src/main/kotlin/com/igor/deepspeech/util/: JNI.kt
kotlin/src/test/kotlin/com/github/briandilley/deepspeech/util/: JNITest.kt
kotlin/src/test/kotlin/com/igor/deepspeech/util/: JNITest.kt
native/: CMakeLists.txt
native/docker/: Dockerfile-android-arm  Dockerfile-android-arm64  Dockerfile-linux-arm64  Dockerfile-linux-armv6  Dockerfile-linux-armv7  Dockerfile-linux-x64  Dockerfile-linux-x86  Dockerfile-linux-x86_64
native/scripts/: build.sh  cross-build.sh  dockcross.sh  env.sh
native/src/main/: AbstractNativeObject.cpp  AbstractNativeObject.h  AbstractNativeObject_jni.cpp  CMakeLists.txt  DeepSpeechNative_jni.cpp  JniUtil.cpp  JniUtil.h  native.c  native.h
tools/: gjavah.sh
